# Pygame_UI

./: README.md  pyproject.toml
src/pygame_ui/: __init__.py  core.py
tests/: test_containers.py  test_lable.py
