[project]
name = "pygame-ui"
version = "0.1.0"
description = "A pygame UI library for easy UI developement in pygame."
readme = "README.md"
authors = [{ name = "Winders", email = "Windersari@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["pygame>=2.6.1"]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
